# rocprof-compute-viewer

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  NOTICES  README.md  amd.icns  icon.qrc  icon.rc
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: list-nonqt-dll-imports.ps1
.github/workflows/: build.yaml  codeql.yml  release.yaml
cmake/: FetchTraceDecoder.cmake  decoder_subbuild_inject.cmake
docs/: conf.py  index.rst
docs/how-to/: using_compute_viewer.rst
docs/install/: installation.rst
docs/sphinx/: _toc.yml.in  requirements.txt
scripts/: generate_snapshot.py
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/analysis/: annotation.cpp  annotation.h  derived_counter.cpp  derived_counter.h  hidden_latency.cpp  hidden_latency.h  latency.cpp  latency.hpp  memory_latency.cpp  memory_latency.hpp
src/button/: historyentry.cpp  historyentry.h  jsonselector.cpp  jsonselector.h
src/code/: asmcode.cpp  asmcode.h  codeload.cpp  codeload.hpp  hotspot.cpp  hotspot.hpp  labelminimap.cpp  labelminimap.h  qcodelist.cpp  qcodelist.h  sourcefile.cpp  sourcefile.h  textelement.cpp  textelement.h
src/collection/: attselector.cpp  attselector.h  derivedcountereditor.cpp  derivedcountereditor.h  flamegraphwidget.cpp  flamegraphwidget.h  histogramdelegate.cpp  histogramdelegate.h  hotspotsummarywidget.cpp  hotspotsummarywidget.h  jsonfilemodel.cpp  jsonfilemodel.h  latencyanalysisdialog.cpp  latencyanalysisdialog.h  license.cpp  license.h  license_data.cpp.in  markerflamegraphwidget.cpp  markerflamegraphwidget.h  options.cpp  options.h
src/collection/flamegraph/: layout.cpp  layout.h  stack_builder.cpp  stack_builder.h  stack_node.h
src/config/: appconfig.cpp  appconfig.h  config.cpp  config.hpp
src/data/: datastore.cpp  datastore.h  datastore_wave.cpp  dispatch_resolver.cpp  dispatch_resolver.h  hwid.h  input_detector.cpp  input_detector.h  json_emitter.cpp  json_emitter.h  load_validation.cpp  load_validation.h  marker_colors.cpp  marker_colors.h  marker_types.h  marker_walker.cpp  marker_walker.h  record_dispatcher.cpp  record_dispatcher.h  record_handlers.cpp  record_handlers.h  records.h  rocpd_emitter.cpp  rocpd_emitter.h  shaderdata.cpp  shaderdata.h  sqtt_funcmap_json.cpp  sqtt_funcmap_json.h  trace_decoder_emitter.cpp  trace_decoder_emitter.h  wavedata.cpp  wavedata.h  wavemanager.cpp  wavemanager.h
src/data/waitcnt/: analysis.cpp  analysis.h  gfx10.cpp  gfx12.cpp  gfx9.cpp
src/graphics/: canvas.cpp  canvas.h  derived_counter.cpp  derived_counter.h  hotspot.cpp  hotspot.h  hotspot_view.cpp  plot.cpp  plot.h  specialized_plots.cpp  specialized_plots.h
src/graphics/container/: counterdialog.cpp  counterdialog.h  datanode.cpp  datanode.h
src/resources/: style.qss
src/summary/: summaryview.cpp  summaryview.h
src/util/: accordionwidget.cpp  accordionwidget.h  custom_layouts.cpp  custom_layouts.h  diagnostic_log.h  highlight.cpp  highlight.h  jsonrequest.cpp  jsonrequest.hpp  memtracker.h  version.h  version.h.in  wave_utils.h
src/wave/: measure.cpp  measure.h  othersimd.cpp  othersimd.h  othersimd_types.h  overlay_utils.h  scroll.cpp  scroll.h  token.cpp  token.h  waveglobal.cpp  waveglobal.h  waveview.cpp  waveview.h
tests/: CMakeLists.txt  TestInstantiator.cpp  asan_suppressions.txt  token_def.json
tests/att/: CMakeLists.txt  att_loader_test.cpp
tests/counters/: CMakeLists.txt  derived_counter_test.cpp
tests/editor/: CMakeLists.txt  derivedcountereditor_test.cpp
tests/input/: CMakeLists.txt  datastore_test.cpp  input_detector_test.cpp  json_emitter_test.cpp
tests/latency/: CMakeLists.txt  compare_results.py  latency.py  latency_cli.cpp  latency_test.cpp  memory_latency.py
tests/markers/: CMakeLists.txt  marker_test.cpp
tests/pcsampling/: code.json  filenames.json  snapshots.json  source_2_kernel.cpp
tests/scripts/: CMakeLists.txt  test_generate_snapshot.py
tests/widgets/: CMakeLists.txt  color_test.cpp  plotcurve_test.cpp  textelement_test.cpp  wave_utils_test.cpp
